--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 
 body {
     display: grid;
-    grid-template-columns: 1fr 10fr;
+    grid-template-columns: 2fr 10fr;
     grid-template-rows: 1fr 10fr;
     width: 100vw;
     height: 100vh;
@@ -19,11 +19,13 @@ body {
     background-color: rgb(219, 212, 212);
     height: 100%;
     width: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .side-bar button {
     position: absolute;
-    top: 10%;
+    top: 30%;
     left: 20%;
     width: 60%;
     height: 50px;
@@ -85,3 +87,21 @@ body {
 .main-section .pages {
     grid-row: 3;
 }
+
+input{
+    margin-bottom: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+label{ 
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+fieldset{
+    display: flex;
+    flex-direction: column;
+    margin-right: 10px;
+    margin-left: 10px;
+}
+
