--- a/styles.css
+++ b/styles.css
@@ -21,11 +21,13 @@ body {
     width: 100%;
     display: flex;
     flex-direction: column;
+    max-width: 250px;
+    flex-wrap: nowrap;
 }
 
 .side-bar button {
     position: absolute;
-    top: 30%;
+    top: 35%;
     left: 20%;
     width: 60%;
     height: 50px;
@@ -50,7 +52,7 @@ body {
     flex-wrap: wrap;
 }
 
-.main-section .test {
+.main-section .book {
     width: 150px; 
     height: 200px;
     background-color: beige;
@@ -58,17 +60,21 @@ body {
     margin: 10px;
     position: relative;
     display: grid;
-    grid-template-rows: repeat(1fr, 3);
+    grid-template-rows: repeat(1fr, 4);
 }
 
-.main-section .test .read {
+.main-section .bookRead {
+    grid-row: 4;
+}
+
+.main-section .book .read {
     position: absolute;
     top: 86%;
     left: 50%;
     height: 30px;
 }
 
-.main-section .test .delete{
+.main-section .book .delete{
     position: absolute;
     top: 86%;
     left: 80%;
@@ -98,10 +104,27 @@ label{
     margin-right: 10px;
 }
 
-fieldset{
+fieldset {
     display: flex;
     flex-direction: column;
     margin-right: 10px;
     margin-left: 10px;
+    position: relative;
+}
+
+.titleLabel {
+    margin-top: 10px;
+}
+
+.yes, .no{
+    position: absolute;
+}
+
+.yes {
+    left: 9%;
+}
+.no {
+    bottom: 15%;
+    left: 10%;
 }
 
